--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<strong>Stack :</strong> Python (Pandas, Matplotlib) / Notebook.
 						</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">Voir le projet (GitHub)</a></li>
+							<li><a href="https://github.com/aligoudjil07/prediction_prix_maison" class="button">Voir le projet (GitHub)</a></li>
 						</ul>
 					</article>
 
@@ -120,7 +120,7 @@
 							<strong>Stack :</strong> MongoDB.
 						</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">Voir le projet (GitHub)</a></li>
+							<li><a href="https://github.com/aligoudjil07/meteo_-_alerte_climatiques" class="button">Voir le projet (GitHub)</a></li>
 						</ul>
 					</article>
 
@@ -138,7 +138,7 @@
 							<strong>Stack :</strong> HTML/CSS + SQL (défis backend, solution fonctionnelle au final).
 						</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">Voir le projet (GitHub / Démo)</a></li>
+							<li><a href="https://github.com/aligoudjil07/laboratoire_analyse_medicales" class="button">Voir le projet (GitHub / Démo)</a></li>
 						</ul>
 					</article>
 
